tests, ajout et amélioration de la méthode rechercher, réparations de petits bugs dû aux modifs ajout de logback.xml + ajout dépendances